# hoosat-cuda

./: CMakeLists.txt
src/: blake3_cuda.cuh  hoohash_kernel.cu  main.cpp  miner.h  stratum.cpp
